# RustCluster

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
clusters/: Cargo.toml
clusters/benches/: dpm.rs  lib.rs  metrics.rs  stats.rs  utils.rs
clusters/examples/: clustering.rs  clustering_multithread.rs  parallellism.rs  plot_data.rs  plot_sampling.rs  synthetic_2d.rs  synthetic_2d_client.rs  synthetic_2d_multithread.rs  synthetic_2d_server.rs
clusters/src/: callback.rs  clusters.rs  lib.rs  model.rs  options.rs  plotting.rs  utils.rs
clusters/src/executor/: mod.rs  rtc.rs  threaded_worker.rs
clusters/src/global/: actions.rs  state.rs
clusters/src/local/: actions.rs  state.rs
clusters/src/metrics/: ic.rs  mod.rs  nmi.rs
clusters/src/params/: clusters.rs  mod.rs  options.rs  thin.rs
clusters/src/priors/: mod.rs  niw.rs
clusters/src/state/: global.rs  local.rs  local_sharded.rs  mod.rs
clusters/src/stats/: batch_mvn.rs  covariance.rs  dp.rs  mod.rs  split_merge.rs
clusters/src/stats/priors/: mod.rs  niw.rs
clusters/src/utils/: data.rs  sampling.rs
dpmmsc/: .gitignore  Cargo.toml
dpmmsc/examples/: data_dist.rs  plot_data.rs  plot_sampling.rs  synthetic_2d.rs
dpmmsc/examples/data/: clusters.npy
dpmmsc/src/: clusters.rs  lib.rs  options.rs  plotting.rs  stats.rs
dpmmsc/src/global/: actions.rs  state.rs
dpmmsc/src/local/: actions.rs  mod.rs  state.rs
dpmmsc/src/metrics/: mod.rs  nmi.rs
dpmmsc/src/priors/: mod.rs  niw.rs
mixturs/: Cargo.toml
mixturs-python/: Cargo.toml
mixturs-python/examples/: cluster.py  y.npy
mixturs-python/src/: lib.rs
mixturs/benches/: dpm.rs  lib.rs  metrics.rs  stats.rs  utils.rs
mixturs/examples/: clustering.rs  clustering_multithread.rs  image_seg.rs  plot_data.rs  plot_sampling.rs
mixturs/examples/data/: x.npy
mixturs/src/: callback.rs  lib.rs  model.rs  plotting.rs
mixturs/src/metrics/: ic.rs  mod.rs  nmi.rs
mixturs/src/params/: clusters.rs  options.rs  thin.rs
mixturs/src/state/: global.rs  local.rs  local_sharded.rs  mod.rs
mixturs/src/stats/: batch_mvn.rs  covariance.rs  dp.rs  mod.rs  split_merge.rs
mixturs/src/stats/priors/: mod.rs  niw.rs
mixturs/src/utils/: data.rs  mod.rs  sampling.rs
