[workspace]
members = [
    "mixturs",
    "mixturs-python",
]

[patch.crates-io]
plotters = { git = 'https://github.com/plotters-rs/plotters', rev = "b1dc7a", optional = true }
plotters-backend = { git = 'https://github.com/plotters-rs/plotters', rev = "b1dc7a", optional = true  }
#statrs-fork = { path = "target/statrs"  }
mixturs = { path = "mixturs"  }
numpy = { git = 'https://github.com/PyO3/rust-numpy.git', branch = 'main' }