[package]
name = "clusters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"], default-features = false }
nalgebra = { version = "0.29", features = ["rand"] }
simba = { version = "0.6", default-features = false }
statrs = { path = "../statrs" }
num-traits = "0.2.14"
itertools = "0.10"
crossbeam-channel = "0.5"
plotters = { git = "https://github.com/EgorDm/plotters.git", branch = "bugfix/vertex-colinearity" }
plotters-backend = { git = "https://github.com/EgorDm/plotters.git", branch = "bugfix/vertex-colinearity" }


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
ndarray-npy = "0.8.1"
ndarray = "0.15.4"

[[example]]
name = "parallellism"

[[bench]]
name = "clusters_bench"
harness = false
path = "benches/lib.rs"