[package]
name = "clusters"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["small_rng"], default-features = false }
nalgebra = { version = "0.29", features = ["rand", "serde-serialize"] }
statrs = { path = "../statrs" }
itertools = "0.10"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
plotters = { git = 'https://github.com/plotters-rs/plotters?rev=b1dc7a', optional = true }
plotters-backend = { git = 'https://github.com/plotters-rs/plotters?rev=b1dc7a', optional = true  }
#remoc = "0.10.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
ndarray-npy = "0.8.1"
ndarray = "0.15.4"

[features]
default = ["plot"]
plot = ["dep:plotters", "dep:plotters-backend"]

[[example]]
name = "parallellism"

[[bench]]
name = "clusters_bench"
harness = false
path = "benches/lib.rs"