[package]
name = "dpmmsc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
nalgebra = { version = "0.29", features = ["rand"] }
simba = { version = "0.6", default-features = false }
statrs = { path = "../statrs" }
num-traits = "0.2.14"

[dev-dependencies]
ndarray-npy = "0.8.1"
ndarray = "0.15.4"
plotters = "0.3.2"

[[example]]
name = "synthetic_2d"
