[package]
name = "mixturs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
statrs-fork = "0.17"
nalgebra = { version = "0.31", features = ["rand"] }
rayon = "1.5"
itertools = "0.10"
rand = { version = "0.8", features = ["small_rng"], default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
plotters = { version = "0.3", optional = true }
plotters-backend = { version = "0.3", optional = true  }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
bincode = { version = "1.3.3" }

[features]
default = ["plot"]
plot = ["dep:plotters", "dep:plotters-backend"]
serde = ["nalgebra/serde-serialize", "dep:serde"]

[[bench]]
name = "mixturs_bench"
harness = false
path = "benches/lib.rs"

[[example]]
name = "clustering"
required-features = ["serde", "plot"]

[[example]]
name = "clustering_multithread"
required-features = ["serde", "plot"]