[package]
name = "mixturs"
version = "0.1.0"
authors = ["Egor Dmitriev"]
description = "Unofficial implementation of Dirichlet Process Mixture Model Split/Merge algorithm"
keywords = ["probability", "statistics", "stats", "clustering", "math"]
categories = ["science", "computer-vision", "mathematics"]
documentation = "https://docs.rs/mixturs/"
homepage = "https://github.com/EgorDm/mixturs"
repository = "https://github.com/EgorDm/mixturs"
license = "MIT"
edition = "2021"
resolver = "2"
readme = "../README.md"

[features]
default = ["plot"]

app = [
    "dep:image",
    "dep:palette",
]

plot = [
    "dep:plotters",
    "dep:plotters-backend"
]

serde = [
    "nalgebra/serde-serialize",
    "dep:serde"
]

[dependencies.statrs-fork]
version = "0.17"

[dependencies.nalgebra]
version = "0.31"
features = ["rand"]

[dependencies.rayon]
version = "1.5"

[dependencies.itertools]
version = "0.10"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.plotters]
version = "0.3"
optional = true

[dependencies.plotters-backend]
version = "0.3"
optional = true

[dependencies.image]
version = "0.24"
optional = true

[dependencies.palette]
version = "0.6"
default-features = false
features = ["std"]
optional = true

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
bincode = { version = "1.3.3" }

[[bench]]
name = "mixturs_bench"
harness = false
path = "benches/lib.rs"

[[example]]
name = "clustering"
required-features = ["serde", "plot"]

[[example]]
name = "clustering_multithread"
required-features = ["serde", "plot"]

[[example]]
name = "image_seg"
required-features = ["app"]